# pip_installable_repo

./: README.md  pyproject.toml
examplepackage/: simple_function.py
