[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pipinstallablerepo"
version = "0.0.1"
description = "A super simple example package"
authors = [{ name="Your Name", email="you@example.com" }]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.26",        
]
